--- a/netlify.toml
+++ b/netlify.toml
@@ -4,22 +4,22 @@ publish = "public"
 
 [build.environment]
 # (Optional) Text in landing page button
-LANDING_BUTTON = "Click to steal some👆"
+LANDING_BUTTON = "Take me to the Docs"
 # (Optional) Site description on landing page
-LANDING_DESCRIPTION = "I have nothing but intelligence."
+LANDING_DESCRIPTION = "The ultimate repository for Battle Brothers Modding knowledge"
 # (REQUIRED) The Markdown page linked to landing page button (e.g. put home for ./home.md)
 LANDING_PAGE = "home"
 # (Optional) Site title on landing page
-LANDING_TITLE = "I love obsidian-zola! 💖"
+LANDING_TITLE = "Battle Brothers Modding Documentation"
 PYTHON_VERSION = "3.8"
 # (REQUIRED) Site repo URL
 REPO_URL = "https://github.com/Enduriel/BB-Modding-Doc-MD"
 # (Optional) Site title in navbar
-SITE_TITLE = "Someone's Second 🧠"
+SITE_TITLE = "Battle Brothers Modding Documentation"
 # (Optional) Site title in browser tab (leave blank to use SITE_TITLE)
 SITE_TITLE_TAB = ""
 # (REQUIRED) Netlify site URL
-SITE_URL = "https://beautiful-kashata-49b378.netlify.app/"
+SITE_URL = "https://bbmodding.enduriel.com"
 # (Optional) Site Timezone
 TIMEZONE = "Europe/London"
 ZOLA_VERSION = "0.15.2"
@@ -40,37 +40,4 @@ FOOTER = ""
 # (Optional, default main) Root section name.
 ROOT_SECTION_NAME = "main"
 # (Optional) visjs graph options. Can remove if desired.
-GRAPH_OPTIONS = """
-        {
-          nodes: {
-            shape: "dot",
-            color: isDark() ? "#8c8e91" : "#dee2e6",
-            font: {
-              face: "Inter",
-              color: isDark() ? "#c9cdd1" : "#616469",
-              strokeColor: isDark() ? "#c9cdd1" : "#616469",
-            },
-            scaling: {
-              label: {
-                enabled: true,
-              },
-            },
-          },
-          edges: {
-            color: { inherit: "both" },
-            width: 0.8,
-            smooth: {
-              type: "continuous",
-            },
-            hoverWidth: 4,
-          },
-          interaction: {
-            hover: true,
-          },
-          height: "100%",
-          width: "100%",
-          physics: {
-            solver: "repulsion",
-          },
-        }
-        """
+GRAPH_OPTIONS = ""
